--- a/index.html
+++ b/index.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Ricky Shelton - Singer</title>
-</head>
-<body>
-  <h1>Ricky Shelton - Singer for Hire</h1>
-  <p>
-    Looking to make your next event unforgettable? Ricky Shelton is a professional singer available for hire at parties, weddings, corporate events, and other special occasions. With a versatile repertoire and years of experience, Ricky brings energy and entertainment to any function. Book now to add a special musical touch to your celebration!
-  </p>
-</body>
-
-</html></html>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Ricky Shelton is a professional singer available for hire at parties, weddings, corporate events, and other special occasions.">
+    <meta name="keywords" content="Ricky Shelton, singer for hire, live music, event entertainment, wedding singer">
+    <meta name="author" content="Ricky Shelton">
+    <meta name="robots" content="index, follow">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
+    <title>Ricky Shelton - Singer</title>
+  </head>
+  <body>
+    <header>
+      <h1>Ricky Shelton - Singer for Hire</h1>
+    </header>
+    <p>
+      Looking to make your next event unforgettable? Ricky Shelton is a professional singer available for hire at parties, weddings, corporate events, and other special occasions. With a versatile repertoire and years of experience, Ricky brings energy and entertainment to any function. Book now to add a special musical touch to your celebration!
+    </p>
+  </body>
+</html>
