Banner added and containers and wrappers added

--- a/index.html
+++ b/index.html
@@ -14,11 +14,20 @@
     <title>Ricky Shelton - Singer</title>
   </head>
   <body>
+
     <header>
       <h1>Ricky Shelton - Singer for Hire</h1>
     </header>
-    <p>
-      Looking to make your next event unforgettable? Ricky Shelton is a professional singer available for hire at parties, weddings, corporate events, and other special occasions. With a versatile repertoire and years of experience, Ricky brings energy and entertainment to any function. Book now to add a special musical touch to your celebration!
-    </p>
+
+    <div class="banner--wrapper">
+      <img class="banner-image" src="img/pexels-suvan-chowdhury-37305-144429.jpg" alt="Banner" />
+    </div>
+    <div class="container text">
+      <h2>Looking to make your next event unforgettable?</h2>
+      <p>
+        Ricky Shelton is a professional singer available for hire at parties, weddings, corporate events, and other special occasions. With a versatile repertoire and years of experience, Ricky brings energy and entertainment to any function. Book now to add a special musical touch to your celebration!
+      </p>
+    </div>
+    
   </body>
 </html>
