--- a/index.html
+++ b/index.html
@@ -19,15 +19,35 @@
       <h1>Ricky Shelton - Singer for Hire</h1>
     </header>
 
-    <div class="banner--wrapper">
+    <div class="banner--wrapper parallax">
       <img class="banner-image" src="img/pexels-suvan-chowdhury-37305-144429.jpg" alt="Banner" />
     </div>
+
     <div class="container text">
       <h2>Looking to make your next event unforgettable?</h2>
       <p>
         Ricky Shelton is a professional singer available for hire at parties, weddings, corporate events, and other special occasions. With a versatile repertoire and years of experience, Ricky brings energy and entertainment to any function. Book now to add a special musical touch to your celebration!
       </p>
     </div>
-    
+
+    <!-- Good gap between text containers -->
+    <div style="height: 8rem;"></div>
+
+    <div class="container text reviews full-width parallax">
+      <h2>Testimonials and reviews</h2>
+      <p>
+        Ricky Shelton is a professional singer available for hire at parties, weddings, corporate events, and other special occasions. With a versatile repertoire and years of experience, Ricky brings energy and entertainment to any function. Book now to add a special musical touch to your celebration!
+      </p>
+    </div>
+
+    <div class="parallax">
+      <img class="banner-image" src="img/pexels-apasaric-2078071.jpg" alt="Banner" />
+    </div>
+
+    <!-- <div class="parallax">
+      <img class="banner-image" src="img/pexels-mark-angelo-sampan-738078-1587927.jpg" alt="Banner" />
+    </div> -->
+
+    <script src="site.js"></script>
   </body>
 </html>
