--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
     <div class="gallery-slider-section">
       <h2>Gallery</h2>
       <div class="gallery-slider">
-        <div class="slick-slide"><img src="img/supplied/best-piano-shot.jpg" alt="Gallery Image 1" class="gallery-img"></div>
-        <div class="slick-slide"><img src="img/supplied/sparkling-bg_landscape.jpg" alt="Gallery Image 2" class="gallery-img"></div>
-        <div class="slick-slide"><img src="img/supplied/mic-in-hand_landscape.jpg" alt="Gallery Image 3" class="gallery-img"></div>
+        <div class="slick-slide"><img src="https://rickyshelton.co.uk/img/best-piano-shot.jpg" alt="Gallery Image 1" class="gallery-img"></div>
+        <div class="slick-slide"><img src="https://rickyshelton.co.uk/img/parkling-bg_landscape.jpg" alt="Gallery Image 2" class="gallery-img"></div>
+        <div class="slick-slide"><img src="https://rickyshelton.co.uk/img/mic-in-hand_landscape.jpg" alt="Gallery Image 3" class="gallery-img"></div>
       </div>
     </div>
 
