Added 2 reviews from Google

--- a/index.html
+++ b/index.html
@@ -58,16 +58,18 @@
       <h2>Testimonials and reviews</h2>
       <div class="testimonial-slider">
         <div>
-          <p>"Ricky made our wedding unforgettable! His voice is incredible and he got everyone dancing."</p>
-          <strong>- S&T</strong>
+          <p>"Richard was the DJ & singer at my partners 30th. But was so much more than that.
+            <br>We had various phone calls leading up to the event as he is very conscientious about the requirements. He didn't not disappoint;
+            <br><br> He was amazing and kept the entertainment going to very end. Fantastic DJ and fantastic singer.</p>
+          <strong>- Ali B</strong>
         </div>
         <div>
-          <p>"Professional, talented, and so much fun. Highly recommended for any event!"</p>
-          <strong>- Corporate Event Organiser</strong>
+          <p>"We had Richie DJ at our wedding in Frome and our guests still talk about how good the music was for the party..."</p>
+          <strong>- Dennis Kaka</strong>
         </div>
         <div>
-          <p>"The best singer we've ever hired. Our guests are still talking about the night!"</p>
-          <strong>- Birthday Party Host</strong>
+          <p>"Some dummy review here..."</p>
+          <strong>- Some Corporate Event Organiser</strong>
         </div>
       </div>
     </div>
