Small layout changeto review 1

--- a/index.html
+++ b/index.html
@@ -59,8 +59,9 @@
       <div class="testimonial-slider">
         <div>
           <p>"Richard was the DJ & singer at my partners 30th. But was so much more than that.
-            <br>We had various phone calls leading up to the event as he is very conscientious about the requirements. He didn't not disappoint;
-            <br><br> He was amazing and kept the entertainment going to very end. Fantastic DJ and fantastic singer.</p>
+          We had various phone calls leading up to the event as he is very conscientious about the requirements.
+          <br><br>He didn't not disappoint;
+          <br><br> He was amazing and kept the entertainment going to very end. Fantastic DJ and fantastic singer.</p>
           <strong>- Ali B</strong>
         </div>
         <div>
