Added 20 songs to slides

--- a/index.html
+++ b/index.html
@@ -83,11 +83,126 @@
     <div class="songs-slider-section">
       <h2>Featured Songs</h2>
       <div class="songs-slider">
-        <div><div class="song-slide">Song Title 1</div></div>
-        <div><div class="song-slide">Song Title 2</div></div>
-        <div><div class="song-slide">Song Title 3</div></div>
-        <div><div class="song-slide">Song Title 4</div></div>
-        <div><div class="song-slide">Song Title 5</div></div>
+        <div>
+          <div class="song-slide">
+            <h3 class="song-artist">Abba</h3>
+            <div class="song-title">Does Your Mother Know</div>
+          </div>
+        </div>
+        <div>
+          <div class="song-slide">
+            <h3 class="song-artist">Bruce Springsteen</h3>
+            <div class="song-title">Dancing in the Dark</div>
+          </div>
+        </div>
+        <div>
+          <div class="song-slide">
+            <h3 class="song-artist">Bryan Adams</h3>
+            <div class="song-title">Summer of '69</div>
+          </div>
+        </div>
+        <div>
+          <div class="song-slide">
+            <h3 class="song-artist">Cutting Crew</h3>
+            <div class="song-title">I Just Died in Your Arms Tonight</div>
+          </div>
+        </div>
+        <div>
+          <div class="song-slide">
+            <h3 class="song-artist">Ed Sheeran</h3>
+            <div class="song-title">Castle on the Hill</div>
+          </div>
+        </div>
+        <div>
+          <div class="song-slide">
+            <h3 class="song-artist">Elvis Presley</h3>
+            <div class="song-title">Suspicious Minds</div>
+          </div>
+        </div>
+        <div>
+          <div class="song-slide">
+            <h3 class="song-artist">George Ezra</h3>
+            <div class="song-title">Shotgun</div>
+          </div>
+        </div>
+        <div>
+          <div class="song-slide">
+            <h3 class="song-artist">The Killers</h3>
+            <div class="song-title">Mr Brightside</div>
+          </div>
+        </div>
+        <div>
+          <div class="song-slide">
+            <h3 class="song-artist">Kings of Leon</h3>
+            <div class="song-title">Sex on Fire</div>
+          </div>
+        </div>
+        <div>
+          <div class="song-slide">
+            <h3 class="song-artist">Lionel Richie</h3>
+            <div class="song-title">All Night Long</div>
+          </div>
+        </div>
+        <div>
+          <div class="song-slide">
+            <h3 class="song-artist">Oasis</h3>
+            <div class="song-title">Wonderwall</div>
+          </div>
+        </div>
+        <div>
+          <div class="song-slide">
+            <h3 class="song-artist">Queen</h3>
+            <div class="song-title">Crazy Little Thing Called Love</div>
+          </div>
+        </div>
+        <div>
+          <div class="song-slide">
+            <h3 class="song-artist">Phil Collins</h3>
+            <div class="song-title">You Can't Hurry Love</div>
+          </div>
+        </div>
+        <div>
+          <div class="song-slide">
+            <h3 class="song-artist">Robbie Williams</h3>
+            <div class="song-title">Let Me Entertain You</div>
+          </div>
+        </div>
+        <div>
+          <div class="song-slide">
+            <h3 class="song-artist">Take That</h3>
+            <div class="song-title">Greatest Day</div>
+          </div>
+        </div>
+        <div>
+          <div class="song-slide">
+            <h3 class="song-artist">The Beatles</h3>
+            <div class="song-title">I Saw Her Standing There</div>
+          </div>
+        </div>
+        <div>
+          <div class="song-slide">
+            <h3 class="song-artist">U2</h3>
+            <div class="song-title">With or Without You</div>
+          </div>
+        </div>
+        <div>
+          <div class="song-slide">
+            <h3 class="song-artist">Train</h3>
+            <div class="song-title">Drops of Jupiter</div>
+          </div>
+        </div>
+        <div>
+          <div class="song-slide">
+            <h3 class="song-artist">Elton John</h3>
+            <div class="song-title">Daniel</div>
+          </div>
+        </div>
+        <div>
+          <div class="song-slide">
+            <h3 class="song-artist">Sam Fender</h3>
+            <div class="song-title">Seventeen Going Under</div>
+          </div>
+        </div>
       </div>
     </div>
 
