--- a/index.html
+++ b/index.html
@@ -310,9 +310,9 @@
       <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
       <script src="site.js"></script>
       <script src="slick.js"></script>
-      <!-- reCAPTCHA v3 script -->
-      <script src="https://www.google.com/recaptcha/api.js?render=6LcSnvMrAAAAALvi54ybABIW1DQbC5opqhfeCeO3" async defer></script>
-      <script src="recaptcha.js"></script>
+  <!-- reCAPTCHA v3 script -->
+  <script src="https://www.google.com/recaptcha/api.js?render=6LcSnvMrAAAAALvi54ybABIW1DQbC5opqhfeCeO3"></script>
+  <script src="recaptcha.js"></script>
     </footer>
   </body>
 </html>
