Renamed JS file to cache bust the CDN

--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
       <script src="slick.js"></script>
   <!-- reCAPTCHA v3 script -->
   <script src="https://www.google.com/recaptcha/api.js?render=6LcSnvMrAAAAALvi54ybABIW1DQbC5opqhfeCeO3"></script>
-  <script src="recaptcha.js"></script>
+  <script src="recaptcha-v2.js"></script>
     </footer>
   </body>
 </html>
