--- a/index.html
+++ b/index.html
@@ -298,7 +298,9 @@
           <!-- reCAPTCHA v3: hidden token field -->
           <input type="hidden" name="g-recaptcha-response" id="g-recaptcha-response" value="">
            <button type="submit" class="send-btn">
-             Send <i class="fa-solid fa-paper-plane"></i>
+             <span class="btn-text"></span>Send</span>
+             <i class="fa-solid fa-paper-plane btn-icon"></i>
+             <img src="img/loading.gif" class="btn-loading" style="display:none;width:20px;height:20px;vertical-align:middle;" alt="Loading...">
            </button>
          </form>
       </div>
