Tried to implement different buttons

--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
            <button type="submit" class="send-btn">
              <span class="btn-text"></span>Send</span>
              <i class="fa-solid fa-paper-plane btn-icon"></i>
-             <img src="img/loading.gif" class="btn-loading" style="display:none;width:20px;height:20px;vertical-align:middle;" alt="Loading...">
+             <img src="img/PacMan-loading.gif" class="btn-loading" style="display:none;width:20px;height:20px;vertical-align:middle;" alt="Loading...">
            </button>
          </form>
       </div>
@@ -314,7 +314,7 @@
       <script src="slick.js"></script>
   <!-- reCAPTCHA v3 script -->
   <script src="https://www.google.com/recaptcha/api.js?render=6LcSnvMrAAAAALvi54ybABIW1DQbC5opqhfeCeO3"></script>
-  <script src="recaptcha-v2.js"></script>
+  <script src="recaptcha-v3.js"></script>
     </footer>
   </body>
 </html>
