Fix for duplicate Send on submit button when cubmitted

--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
           <!-- reCAPTCHA v3: hidden token field -->
           <input type="hidden" name="g-recaptcha-response" id="g-recaptcha-response" value="">
            <button type="submit" class="send-btn">
-             <span class="btn-text"></span>Send</span>
+             <span class="btn-text">Send</span>
              <i class="fa-solid fa-paper-plane btn-icon"></i>
              <img src="img/PacMan-loading.gif" class="btn-loading" style="display:none;width:20px;height:20px;vertical-align:middle;" alt="Loading...">
            </button>
