--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <p>"Richard was the DJ & singer at my partners 30th. But was so much more than that.
           We had various phone calls leading up to the event as he is very conscientious about the requirements.
           <br><br>He didn't not disappoint;
-          <br><br> He was amazing and kept the entertainment going to very end. Fantastic DJ and fantastic singer.</p>
+          <br><br> He was amazing and kept the entertainment going to very end. Fantastic DJ and fantastic singer."</p>
           <strong>- Ali B</strong>
         </div>
         <div>
@@ -69,8 +69,10 @@
           <strong>- Dennis Kaka</strong>
         </div>
         <div>
-          <p>"Some dummy review here..."</p>
-          <strong>- Some Corporate Event Organiser</strong>
+          <p>"I recently celebrated my birthday in the most spectacular way—by attending a live performance from an incredibly talented singer, and I couldn’t have asked for a better experience!
+            <br><br>If you're looking for a performer who can turn any event into a celebration of music and joy, this singer is it. I left with a full heart, a huge smile, and memories I’ll cherish for years to come."
+          </p>
+          <strong> ⭐️⭐️⭐️⭐️⭐️ — Highly recommended!</strong>
         </div>
       </div>
     </div>
