Updated Songs and Form Email address

--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
       <div class="songs-slider">
         <div>
           <div class="song-slide">
-            <h3 class="song-artist">Abba</h3>
-            <div class="song-title">Does Your Mother Know</div>
+            <h3 class="song-artist">Deacon Blue</h3>
+            <div class="song-title">Dignity</div>
           </div>
         </div>
         <div>
@@ -124,7 +124,7 @@
         <div>
           <div class="song-slide">
             <h3 class="song-artist">George Ezra</h3>
-            <div class="song-title">Shotgun</div>
+            <div class="song-title">Paradise</div>
           </div>
         </div>
         <div>
@@ -171,8 +171,8 @@
         </div>
         <div>
           <div class="song-slide">
-            <h3 class="song-artist">Take That</h3>
-            <div class="song-title">Greatest Day</div>
+            <h3 class="song-artist">Michael Buble</h3>
+            <div class="song-title">Cry Me A River</div>
           </div>
         </div>
         <div>
@@ -203,6 +203,18 @@
           <div class="song-slide">
             <h3 class="song-artist">Sam Fender</h3>
             <div class="song-title">Seventeen Going Under</div>
+          </div>
+        </div>
+        <div>
+          <div class="song-slide">
+            <h3 class="song-artist">Michael Buble</h3>
+            <div class="song-title">Feeling Good</div>
+          </div>
+        </div>
+        <div>
+          <div class="song-slide">
+            <h3 class="song-artist">Commodores</h3>
+            <div class="song-title">Easy</div>
           </div>
         </div>
       </div>
